sizing changes made

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
   <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>CatPaws | Online Class Openings</title>
+    <title>CatPaws | Homepage</title>
     <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="CatPaws Homepage, landing page for students and faculty of Northwest Missouri State University">
+    <meta name="keywords" content="Northwest Missouri State Univeristy, Catpaws, Cat Paws. Catpaws Login, Login Page, Starting Page, NWMSU login">
+    <meta name="authors" content="Ryann Elliff, Makayla Polak, Landyn Cowger">
     <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display:400iRoboto&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="media/favicon.ico">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
