--- a/checkapp.html
+++ b/checkapp.html
@@ -109,6 +109,7 @@
 <!-- Main Content-->
     <main>
       <div class="grid-container">
+        <div class="checkapp-cont">
         <div class="form-container">
           <h1>Admission Application</h1>
           <h4 class="requiredText">*for Graduate, RN to BSN and International applicants only</h4>
@@ -133,16 +134,12 @@
             <p><a href="https://ssbprod.nwmissouri.edu/PROD/bwskalog.p_disploginnew?in_id=&cpbl=&newid="> Create your username and PIN.</a> </p>
             </div>
 
-            <div class="form-container ca-spacing">
+            <div class="form-container">
               <p>If you have questions about the application or admission process, please call us at <a href="1.800.633.1175">1.800.633.1175.</a></p>
               <p>For technical issues, contact the Computing Help Desk at <a href="660.562.1634">660.562.1634</a> or <a href="mailto:helpdesk@nwmissouri.edu">helpdesk@nwmissouri.edu.</a></p>
             </div>
           </div>
-
-
-
-
-
+        </div>
       </div>
       <div class="footerRow">
       <img src="media/bottom-logo.png" alt="Northwest Missouri State Uiversity Logo">
