--- a/onlineclasses.html
+++ b/onlineclasses.html
@@ -188,7 +188,7 @@
 
       </div>
       <div class="footerRow">
-      <img src="media/mobile-nw-logo.png" alt="Northwest Missouri State Uiversity Logo">
+      <img src="media/bottom-logo.png" alt="Northwest Missouri State Uiversity Logo">
       </div>
     </main>
 
