--- a/textbooks.html
+++ b/textbooks.html
@@ -325,7 +325,7 @@
           </fieldset>
       </div>
       <div class="footerRow">
-      <img src="media/mobile-nw-logo.png" alt="Northwest Missouri State Uiversity Logo">
+      <img src="media/bottom-logo.png" alt="Northwest Missouri State Uiversity Logo">
       </div>
     </main>
 
