--- a/textbooks.html
+++ b/textbooks.html
@@ -12,6 +12,9 @@
     <title>CatPaws | Textbook Information</title>
     <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="CatPaws Textbook Information, textbook information for students and faculty of Northwest Missouri State University">
+    <meta name="keywords" content="Northwest Missouri State Univeristy, Catpaws, Cat Paws, Textbooks, Textbook Information, Required Readings, NWMSU">
+    <meta name="authors" content="Ryann Elliff, Makayla Polak, Landyn Cowger">
     <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display:400iRoboto&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="media/favicon.ico">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
