textbooks nav updates

--- a/textbooks.html
+++ b/textbooks.html
@@ -51,7 +51,7 @@
 </div>
 
     <!-- Navigation and Logo -->
-    <class="regularNav">
+    <div class="regularNav">
     <div id="go-down">
       <div class="topBar">
         <a href="index.html"><img src="media/catpaws-logo-final.jpg" alt="catpaws logo" class="logo"></a>
