changes made to link color to improve accessibility

--- a/textbooks.html
+++ b/textbooks.html
@@ -114,7 +114,7 @@
       <div class="grid-container">
         <div class="form-container">
           <h1>Weclome, bearcats!</h1>
-          <p>The Textbooks listed for each course are not guaranteed to be all inclusive but to give you some idea of the textbook(s) that will be used for the selected course(s) that you are viewing.</p>
+          <p>The textbooks listed for each course are not guaranteed to be all inclusive but to give you some idea of the textbook(s) that will be used for the selected course(s) that you are viewing.</p>
           <p>Due to faculty changes and other factors the textbooks and required materials might change prior to classes beginning. Some courses require purchased materials to accompany the rental materials. To view required textbooks/materials that will need to be purchased use the links below.</p>
           <p>Online Professional (OP) students can find your textbooks with the <a href="https://cite5.nwmissouri.edu/textbookFinder/#/student/textbook-finder">Online Professional Textbook Finder</a></p>
         </div>
