--- a/textbooks.html
+++ b/textbooks.html
@@ -28,7 +28,7 @@
     <!-- Top Navigation Menu -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <div class="topnav">
-  <a href="index.html"><img src="media/catpaws-logo-final.jpg" class="mobileLogo"></a>
+  <a href="index.html"><img src="media/catpaws-logo-final.jpg" alt="CatPaws Logo" class="mobileLogo"></a>
   <!-- Navigation links (hidden by default) -->
   <div id="myLinks" class="mobileLinks">
     <a href="blank.html">Login/Enter Secure Area</a>
