--- a/checkapp.html
+++ b/checkapp.html
@@ -2,7 +2,7 @@
 <!--
   textbooks.html
   Students: Landyn Cowger, Ryann Elliff, Mikayla Polak
-  File Name: index.html
+  File Name: checkapp.html
   Date: 10/11/22
 
   -->
