--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <div class="grid-item"><a href="blank.html"><img src="media/transfer.png" alt="Transfer Equivalencies"></a></div>
           <div class="grid-item"><a href="textbooks.html"><img src="media/textbookinfo.png" alt="Textbook Information"></a></div>
           <div class="grid-item"><a href="blank.html"><img src="media/accpay.png" alt="Account Payment Center"></a></div>
-          <div class="grid-item"><a href="blank.html"><img src="media/accessibility.png" alt="Accessibility Mode"></a></div>
+          <div class="grid-item"><a href="access.html"><img src="media/accessibility.png" alt="Accessibility Mode"></a></div>
         </div>
         </div>
         <div class="footerRow">
