--- a/checkapp.html
+++ b/checkapp.html
@@ -128,7 +128,7 @@
               <label for="Password"> Password:</label>
               <input type="text" name="Password" id="Password">
             <br><br>
-            <input type="submit" id="submit" value="Login" class="button-74">
+            <input type="submit" id="submit" value="Login" class="buttonStyle">
             <h3> New Users</h3>
             <p>Create an account to start your admission application.</p>
             <p><a href="https://ssbprod.nwmissouri.edu/PROD/bwskalog.p_disploginnew?in_id=&cpbl=&newid="> Create your username and PIN.</a> </p>
