--- a/onlineclasses.html
+++ b/onlineclasses.html
@@ -117,12 +117,12 @@
 
       <fieldset class="form-container">
         <p class="requiredText">* Term selection required for all search criterias</p>
-        <label> Select Term * :</label>
-        <select name="Terms" id="Term" required multiple class="options">
-          <option value="Fall_2022">Fall 2022</option>
-          <option value="Spring_2023">Spring 2023</option>
-          <option value="Summer_2023">Summer 2023</option>
-          <option value="Fall_2023">Fall 2023</option>
+        <label> Select Level: </label>
+        <select name="Levels" id="level" class="options">
+          <option value="All">ALL</option>
+          <option value="Undergrad">Undergraduate</option>
+          <option value="Grad">Graduate</option>
+          <option value="Specialist">Specialist</option>
         </select>
         <br>
         <label> Search by Department:</label>
@@ -182,7 +182,7 @@
             <label for="CourseNum"> Course Number (5 DIGIT number):</label>
             <input type="text" name="CourseNum" id="CourseNum">
           <br><br>
-          <input type="submit" id="submit" value="Get Class Openings" class="button-74">
+          <input type="submit" id="submit" value="Get Class Openings" class="buttonStyle">
         </fieldset>
 
 
