--- a/textbooks.html
+++ b/textbooks.html
@@ -324,7 +324,7 @@
             <input type="text" name="CourseNum" id="CourseNum">
             <br>
             <br>
-            <input type="submit" id="submit" value="Get Class Openings" class="button-74">
+            <input type="submit" id="submit" value="Get Class Openings" class="buttonStyle">
           </fieldset>
       </div>
       <div class="footerRow">
