--- a/access.html
+++ b/access.html
@@ -26,54 +26,6 @@
     <div id="go-down">
       <div class="topBar">
         <a href="index.html"><img src="media/catpaws-logo-final.jpg" class="logo" alt="Catpaws Logo"></a>
-        <nav class="navbar">
-          <div class="hamburger-menu">
-            <div class="line line-1"></div>
-            <div class="line line-2"></div>
-            <div class="line line-3"></div>
-          </div>
-          <ul class="nav-list">
-            <li class="nav-item">
-            <a href="index.html" class="nav-link"> Home</a>
-          </li>
-          <li class="nav-item">
-            <a href="blank.html" class="nav-link"> Login / Enter Secure Area</a>
-          </li>
-          <li class="nav-item">
-            <a href="blank.html" class="nav-link"> Apply for Admissions</a>
-          </li>
-          <li class="nav-item">
-            <a href="checkapp.html" class="nav-link">Check Application Status for Graduate and International Students</a>
-          </li>
-          <li class="nav-item">
-            <a href="blank.html" class="nav-link">Apply for Housing</a>
-          </li>
-          <li class="nav-item">
-            <a href="blank.html" class="nav-link">Class Schedule in Detail</a>
-          </li>
-          <li class="nav-item">
-            <a href="blank.html" class="nav-link">Class Openings at a Glance</a>
-          </li>
-          <li class="nav-item">
-            <a href="onlineclasses.html" class="nav-link">Online Class Openings</a>
-          </li>
-          <li class="nav-item">
-            <a href="blank.html" class="nav-link">Transfer Equivalencies</a>
-          </li>
-          <li class="nav-item">
-            <a href="textbooks.html" class="nav-link">Textbook Information</a>
-          </li>
-          <li class="nav-item">
-            <a href="blank.html" class="nav-link">Account Payment Center</a>
-          </li>
-          <li class="nav-item">
-            <a href="blank.html" class="nav-link">Accessbility Mode</a>
-          </li>
-          <li class="nav-item">
-            <a href="blank.html" class="nav-link">Forgot Password?</a>
-          </li>
-        </ul>
-      </nav>
     </div>
   </div>
 
@@ -95,7 +47,7 @@
           <div class="grid-item"><a href="access.html">Accessibility Mode</a></div>
         </div>
         <div class="footerRow">
-        <img src="media/mobile-nw-logo.png" alt="Northwest Missouri State Uiversity Logo">
+        <img src="media/bottom-logo.png" alt="Northwest Missouri State Uiversity Logo">
         </div>
     </main>
 
